<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.slytechs.jnet.jnetruntime</groupId>
	<artifactId>jnetruntime-sdk-parent</artifactId>
	<version>0.2.0</version>
	<packaging>pom</packaging>
	<name>jNetRuntime SDK - Parent POM</name>
	<description>Network utilities and runtime related classes required by all
		other jNet modules</description>
	<modules>
		<module>jnetruntime-api</module>
		<module>jnetruntime-systable</module>
	</modules>

	<properties>
		<jdk.version>22</jdk.version>
		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<java.preview></java.preview>
		<java.encoding>UTF-8</java.encoding>
		<java.native>--enable-native-access=ALL-UNNAMED</java.native>
		<groups>user-permission</groups>
		<excludeGroups>windows-api|unix-api|linux-api</excludeGroups>
		<gpg.keyname>0xD6D487A5</gpg.keyname>

		<!-- Dependency versions -->
		<junit.platform.version>1.10.1</junit.platform.version>
		<junit.jupiter.version>5.10.1</junit.jupiter.version>

		<!-- Plugin versions -->
		<maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
		<maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
		<maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
		<maven.source.plugin.version>3.3.0</maven.source.plugin.version>
		<nexus.staging.plugin.version>1.6.13</nexus.staging.plugin.version>
		<maven.gpg.plugin.version>3.1.0</maven.gpg.plugin.version>
	</properties>

	<licenses>
		<license>
			<name>Sly Technology's Free License</name>
			<url>http://www.slytechs.com/free-license-text</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>markb</id>
			<name>Mark Bednarczyk</name>
			<email>mark@slytechs.com</email>
			<organization>Sly Technlogies</organization>
			<organizationUrl>http://slytechs.com</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<!-- JUnit Platform for running tests -->
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite-api</artifactId>
			<version>${junit.platform.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- JUnit Jupiter engine for writing and running tests -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<extensions>
			<!-- OS Maven Plugin for OS-specific properties -->
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.7.0</version>
			</extension>
		</extensions>
		<pluginManagement>
			<plugins>
				<!-- Maven Compiler Plugin for compiling Java source -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.plugin.version}</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<release>${jdk.version}</release>
						<enablePreview>false</enablePreview>
					</configuration>
				</plugin>

				<!-- Maven Site Plugin for generating project websites -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>

				<!-- Maven Surefire Plugin for running unit tests -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.5</version>
					<configuration>
						<forkCount>1</forkCount>
						<reuseForks>false</reuseForks>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>

				<!-- Maven Javadoc Plugin for generating Javadocs -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven.javadoc.plugin.version}</version>
					<configuration>
						<sourcepath>${basedir}/src/main/java</sourcepath>
						<show>public</show>
						<additionalOptions>${java.preview}</additionalOptions>
						<additionalOptions>-quiet</additionalOptions>
						<excludePackageNames>*.internal:*.internal.*</excludePackageNames>
					</configuration>
				</plugin>

				<!-- Maven SCM Publish Plugin for publishing to SCM -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-publish-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<scmBranch>gh-pages</scmBranch>
					</configuration>
				</plugin>

				<!-- Maven Source Plugin for attaching source jars -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven.source.plugin.version}</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- Nexus Staging Maven Plugin for deploying to OSSRH -->
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>${nexus.staging.plugin.version}</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh</serverId>
						<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>

				<!-- Maven GPG Plugin for signing artifacts -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.1.0</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
							<configuration>
								<keyname>${gpg.keyname}</keyname>
								<passphraseServerId>${gpg.keyname}</passphraseServerId>
								<gpgArguments>
									<arg>--pinentry-mode</arg>
									<arg>loopback</arg>
								</gpgArguments>
							</configuration>

						</execution>
					</executions>
				</plugin>

				<!-- Versions Maven Plugin for managing versions of artifacts -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.15.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<!-- Maven Surefire Report Plugin for generating test reports -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.0.0-M7</version>
			</plugin>

			<!-- Maven Javadoc Plugin for generating Javadoc reports -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc.plugin.version}</version>
				<configuration>
					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
					<windowtitle>Public API for ${project.name}
						${project.version}</windowtitle>
					<testDoctitle>Test API for ${project.name}
						${project.version}</testDoctitle>
					<testWindowtitle>Test API for ${project.name}
						${project.version}</testWindowtitle>
					<encoding>${java.encoding}</encoding>
					<source>${jdk.version}</source>
					<overview>${basedir}/Overview.html</overview>
					<additionalOptions>${java.preview}</additionalOptions>
					<excludePackageNames>*.internal</excludePackageNames>
					<failOnError>${javadoc.skipErrors}</failOnError>
				</configuration>
				<reportSets>
					<reportSet>
						<id>aggregate-no-fork</id>
						<configuration>
							<goal>aggregate-no-fork</goal>
							<show>public</show>
							<skip>false</skip>
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>test-aggregate-no-fork</id>
						<configuration>
							<goal>test-aggregate-no-fork</goal>
							<show>private</show>
							<skip>true</skip>
						</configuration>
						<reports>
							<report>test-javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<organization>
		<name>Sly Technologies Inc</name>
		<url>http://slytechs.com</url>
	</organization>

	<issueManagement>
		<system>Github Issue Tracking</system>
		<url>https://github.com/slytechs-repos/${project.artifactId}/issues</url>
	</issueManagement>

	<scm>
		<connection>
			scm:git:git://github.com/slytechs-repos/${project.artifactId}.git</connection>
		<developerConnection>
			scm:git:ssh:git://github.com/slytechs-repos/${project.artifactId}.git</developerConnection>
		<url>https://github.com/slytechs-repos/${project.artifactId}</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<site>
			<id>github</id>
			<url>scm:git:git@github.com:slytechs-repos/${parent.project}.git</url>
		</site>
	</distributionManagement>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.6.3</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>